styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');

/* celeste arg: #75aee0 */
*{
    margin:0;
    padding:0;
    font-family: 'Roboto', sans-serif;
}
html {
    background-color: #fafafa;
    min-height: 100%;
    position: relative;
    height: 100%;
    margin-bottom: 50px;
    box-sizing: border-box;
}

header {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
}

header > h1 {
    margin: 5px 0px 0px 0px;
    text-transform: uppercase;
}

header > h3 {
    margin: 10px 0px 10px 0px;
}

content {
    flex-direction: row;
}

.main-container{
    display: flex;
    margin-left: 10%;
    margin-right: 10%;
    box-shadow: 1px 1px 2px gray;
}

.img-container {
    flex: 40%;
    height: 100%;
    display: flex;
    justify-content: center;
    position: inherit;
    background-color: #0070d3;

}
.arg-img {
    width: 400px;
}

.lorem-container {
    flex: 60%;
    width: 40%;
    flex-direction: column;
    box-sizing: border-box;
    padding: 40px;
    display: flex;
    background-color: white;
    align-items: center;
    justify-content: center;
    text-align: justify;
    color: black;
    font-size: 1.25rem;
}

.quote {
    align-items: center;
}

.author {
    width: 100%;
    text-align: end;
}
.btn-container{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10px;
}
.button {
    background-color: #75aee0;
    color: white;
    border: none;
    padding: 15px 32px;
    display: inline-block;
    text-align: center;
    font-size: 1rem;
}

.button:hover {
    background-color: lightblue;
    cursor: pointer;
}

.matecito {
    margin-bottom: -4px;
    width: 20px;
}

footer {
    display: flex;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 50px;
    justify-content: center;
    text-align: center;
    align-items: center;
}

footer > div > p > a {
    text-decoration: none;
    color: black;
}

@media (max-width: 600px) {
    .main-container {
        margin: 0;
        width: 100%;
        flex-direction: column;
    }
    .img-container {
        width: 100%;
        height: 100%;
        justify-content: center;
        background-color: #75aee0;
    }
    .arg-img{
        width: 50%;
    }
    .lorem-container{
        width: 100%;
        height: 100%;
    }
    footer {
        left: 0;
        bottom: 0;
        /* position: absolute; */
    }
}

